tests/ui-nightly/transmute-ref-dst-not-frombytes.stderr
error[E0277]: the trait bound `Dst: zerocopy::FromBytes` is not satisfied
  --> tests/ui-nightly/transmute-ref-dst-not-frombytes.rs:23:34
   |
23 | const DST_NOT_FROM_BYTES: &Dst = transmute_ref!(&AU16(0));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                  |
   |                                  unsatisfied trait bound
   |                                  required by a bound introduced by this call
   |
help: the trait `zerocopy::FromBytes` is not implemented for `Dst`
  --> tests/ui-nightly/transmute-ref-dst-not-frombytes.rs:20:1
   |
20 | struct Dst(AU16);
   | ^^^^^^^^^^
   = note: Consider adding `#[derive(FromBytes)]` to `Dst`
   = help: the following other types implement trait `zerocopy::FromBytes`:
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
           and $N others
note: required by a bound in `AssertDstIsFromBytes`
  --> tests/ui-nightly/transmute-ref-dst-not-frombytes.rs:23:34
   |
23 | const DST_NOT_FROM_BYTES: &Dst = transmute_ref!(&AU16(0));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertDstIsFromBytes`
   = note: the full name for the type has been written to '$DIR/target/by-toolchain/nightly/tests/trybuild/x86_64-unknown-linux-gnu/debug/deps/$CRATE-96d9c15d20aa1920.long-type-13937199175100970790.txt'
   = note: consider using `--verbose` to print the full type name to the console
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
